--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 
 # Server Configuration
 server.port=8080
-server.servlet.context-path=/api
+#server.servlet.context-path=/api
 
 # Logging Configuration
 logging.level.org.hibernate.SQL=DEBUG
